# Agentic-BeesTrap

./: .gitignore  README.md
agent/: .env.example  .gitignore  Cargo.toml
agent/assets/: Final_BeeTrap.ipynb  input.json  network.ezkl  network.onnx  settings.json  vk.key  witness.json
agent/src/: indexer.rs  main.rs  network.rs  processor.rs  types.rs
agent/src/ui/: app.rs  mod.rs
contracts/: foundry.toml
contracts/broadcast/DeployBeeTrap.s.sol/1301/: run-1770563086094.json  run-1770563160091.json  run-1770563260061.json  run-1770563365917.json
contracts/deployments/: beetrap-deployment.json
contracts/script/: DeployBeeTrap.s.sol  DeployBeeTrap_update.s.sol
contracts/src/: AgentNFT.sol  BeeTrapHook.sol  ERC7857.sol  ValidationRegistry.sol  Verifier.sol
contracts/src/interfaces/: IERC7857.sol
contracts/test/: AgentNFT.t.sol  BeeTrapHook.t.sol  BeeTrapHookIntegration.t.sol  BeeTrapHookWithVerifier.t.sol  BeeTrapIntegration.t.sol  ValidationRegistry.t.sol
contracts/test/mocks/: MockVerifier.sol
docs/: DELIVERY_SUMMARY.md  FEATURES_AND_ROADMAP.md  LOCAL_TESTING.md  TESTING_GUIDE.md  WORKFLOW_DOCUMENTATION.md
logs/: beetrap.log.2026-02-05  sentinel.log.2026-02-06  sentinel.log.2026-02-08
scripts/: local-test.sh
